Add explicit Locale.ROOT and UTF_8 charset specifications
Systematically updates remaining String.format() calls to use
Locale.ROOT and I/O operations to use StandardCharsets.UTF_8
across 89 files to ensure consistent behavior regardless of
system locale settings.