@@ -1047,7 +1047,7 @@ public class ContentClusterTest extends ContentBaseTest {
                                                        Optional<Flavor> flavor, StringBuffer deployWarningsBuffer) throws Exception {
         DeployLogger logger = (level, message) -> {
             if (level == Level.WARNING) { // only care about warnings
-                deployWarningsBuffer.append("%s\n".formatted(message));
+                deployWarningsBuffer.append(String.format(java.util.Locale.ROOT, "%s\n", message));
             }
         };
         DeployState.Builder deployStateBuilder = new DeployState.Builder()
@@ -1547,15 +1547,15 @@ public class ContentClusterTest extends ContentBaseTest {
         // sentinel value that must never be used by actual nodes.
         for (int distKey : List.of(-1, 65535, 65536, 100000)) {
             assertThrows(IllegalArgumentException.class, () ->
-                    parse("""
+                    parse(String.format(java.util.Locale.ROOT, """
                             <content version="1.0" id="storage">
                               <documents/>
                               <redundancy>1</redundancy>
                               <group>
                                 <node hostalias='mockhost' distribution-key='%d' />
                               </group>
-                            </content>""".formatted(distKey)
-                        ));
+                            </content>""", distKey))
+                        );
         }
     }
 
@@ -1574,7 +1574,7 @@ public class ContentClusterTest extends ContentBaseTest {
                "  <redundancy>1</redundancy>" +
                "  <documents/>" +
                "  <group>" +
-               "    <node distribution-key=\"%d\" hostalias=\"mockhost\"/>".formatted(key) +
+               String.format(java.util.Locale.ROOT, "    <node distribution-key=\"%d\" hostalias=\"mockhost\"/>", key) +
                "  </group>" +
                "</content>";
     }
@@ -1751,7 +1751,7 @@ public class ContentClusterTest extends ContentBaseTest {
     }
 
     private String servicesWithGroups(int groupCount, double minGroupUpRatio) {
-        String services = String.format("<?xml version='1.0' encoding='UTF-8' ?>" +
+        String services = String.format(java.util.Locale.ROOT, "<?xml version='1.0' encoding='UTF-8' ?>" +
                 "<services version='1.0'>" +
                 "  <container id='default' version='1.0' />" +
                 "  <content id='storage' version='1.0'>" +
@@ -1770,7 +1770,7 @@ public class ContentClusterTest extends ContentBaseTest {
         };
         services += distribution;
         for (int i = 0; i < groupCount; i++) {
-            services += String.format("    <group name='g-%d' distribution-key='%d'>" +
+            services += String.format(java.util.Locale.ROOT, "    <group name='g-%d' distribution-key='%d'>" +
                                               "      <node hostalias='mockhost' distribution-key='%d'/>" +
                                               "    </group>",
                                       i, i, i);
